force-app/main/default/objects/sma__MADataLoad__c/sma__MADataLoad__c.object-meta.xml
<CustomObject>
    <label>MapAnything Data Load</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>MapAnything Data Load Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Data Loads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>