force-app/main/default/objects/sma__MADataLoad__c/fields/sma__DataType__c.field-meta.xml
<CustomField>
    <fullName>sma__DataType__c</fullName>
    <label>DataType</label>
    <length>50</length>
    <type>Text</type>
</CustomField>