force-app/main/default/objects/sma__MADataLoad__c/fields/sma__Email1__c.field-meta.xml
<CustomField>
    <fullName>sma__Email1__c</fullName>
    <label>Email1</label>
    <required>true</required>
    <type>Email</type>
</CustomField>