force-app/main/default/objects/sma__MADataLoad__c/fields/sma__Email3__c.field-meta.xml
<CustomField>
    <fullName>sma__Email3__c</fullName>
    <label>Email3</label>
    <type>Email</type>
</CustomField>