force-app/main/default/objects/sma__MADataLoad__c/fields/sma__Settings__c.field-meta.xml
<CustomField>
    <fullName>sma__Settings__c</fullName>
    <label>Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>