force-app/main/default/objects/sma__MADataLoad__c/fields/sma__Total_Records__c.field-meta.xml
<CustomField>
    <fullName>sma__Total_Records__c</fullName>
    <label>Total Records</label>
    <summarizedField>sma__MADataLoadSegment__c.sma__Total_Records__c</summarizedField>
    <summaryForeignKey>sma__MADataLoadSegment__c.sma__DataLoad__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>